--- a/css/estilos.CSS
+++ b/css/estilos.CSS
@@ -1,9 +1,26 @@
-.modalCenter
-{
+.modalCenter{
   top:50% !important;
   transform: translateY(-50%) !important;
 }
 img{
 display:block;
 margin:auto;
+}
+header{
+	background-color:#33ffad;
+	margin-left:5px;
+	margin-right:5px;
+}
+footer{
+	background-color: lightblue;
+	margin-left:5px;
+	margin-right:5px;
+}
+th{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 20px;
+}
+td,p{
+	font-family: Arial, Helvetica, sans-serif;
+	font-size:18px;
 }
